# knowledge-compiler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  next-phase-plan-v2.md  next-phase-plan-v3.md  next-phase-plan.md  ontology_spec.md  pyproject.toml
.reasonix/truncated-results/: 1783107560802-60f53ca2-run_command.txt  1783107790824-441a83f8-run_command.txt  1783108568269-89afc335-run_command.txt
analysis/: alignment_statistics.json  conflicts.json  merge_report.md  ontology_statistics.md
books/acsm12/: manifest.yaml  registry.yaml
books/nsca-cscs/: manifest.yaml  registry.yaml
compiler/: cli.py  queue.py
compiler/providers/: __init__.py  openai.py  reasonix.py
docs/: failure_cases.md  knowledge-ir.md  ontology.md  overview.md  pipeline.md  schema.md
docs/benchmark/: README.md  (+9 more)
knowledge_compiler/: __init__.py  skill.py
prompts/: 01_chunk.md  02_extract.md  03_object_generate.md  04_validate.md  05_export.md  CHANGELOG.md
releases/: v0.1-plan.md
schema/: concept.yaml  contraindication.yaml  formula.yaml  procedure.yaml  recommendation.yaml  tablerow.yaml  threshold.yaml  warning.yaml
scripts/: batch_nsca.py  batch_nsca_full.py  batch_process.py  build_nsca_manifest.py  create_nsca_full.py  cross_source_analysis.py  decompose_objects.py  gen_manifest.py  knowledge-compiler  nsca_batch.py  nsca_chunks.py  nsca_count.py  nsca_full.py  nsca_outline.py  process_nsca.py  rag_baseline.py  run_benchmark.py  run_benchmark_25.py  run_queue.py  run_reasonix.bat  validate.py
tests/: __init__.py  test_decompose.py  test_skill.py  test_validate.py
(+3969 files in other folders)
