[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-compiler"
version = "0.1.0"
description = "Compile expert textbooks into typed, validated, machine-readable knowledge objects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["knowledge-graph", "textbook", "compiler", "ai", "ontology"]
authors = [
    { name = "Max Guo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "pyyaml>=6.0",
    "PyPDF2>=3.0",
]

[project.urls]
Homepage = "https://github.com/GBX-Max1220/knowledge-compiler"
Repository = "https://github.com/GBX-Max1220/knowledge-compiler"
Issues = "https://github.com/GBX-Max1220/knowledge-compiler/issues"

[tool.setuptools.packages.find]
include = ["knowledge_compiler*"]
